# test_django

./: .env.example  pyproject.toml
app/: models.py  urls.py
app/api/: serializer.py  view.py
app/migrations/: 0001_initial.py  0002_create_data.py
django_app/: settings.py  urls.py
